--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Experienced Music Design</span></h2>
                 </div>
                 <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family I now know how to make active and great soundtracks, some different themes than others, all music is made original without/with very few samples, I am capable of making any type of music that you request, whether it be horror, atmospheric, lofi, calming, active, intense, or a remix of a meme, I've got you.</span></p>
-                <p><span style="color: #f0f0f0;">All audio I put on this portfolio is completely free to download and use for whatever purposes you may want, credit is appreciated but not mandatory.</span></p>
+                <p><span style="color: #f0f0f0;">Some audio and music I put on this portfolio can be free to download and use for whatever purposes you may want, credit is appreciated but not mandatory, this may not be the case for all audio and music.</span></p>
+                <p><span style="color: #ff8282;">This entire website is under active development, if the music is not playing, reload the page, temporary fix until I figure out how to fix it permanentely.</span></p>
                 <div class="row-music">
                     <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
@@ -420,9 +421,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/Where am I.mp3" type="audio/mp3">
@@ -437,9 +435,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/Atmospheric thing.mp3" type="audio/mp3">
@@ -454,9 +449,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/In-Between.mp3" type="audio/mp3">
@@ -477,6 +469,34 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/Limbo.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Truth Be Told</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/Truth Be Told.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">The Forever Night Sky</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/The Forever Night Sky.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -505,9 +525,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/The_Art_Gallery.mp3" type="audio/mp3">
@@ -522,9 +539,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/Zmgr Vcrg.mp3" type="audio/mp3">
@@ -607,9 +621,6 @@
                             <input type="range" class="seek-slider" value="0" max="100">
                             <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/EightyEight.mp3" type="audio/mp3">
@@ -634,8 +645,25 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">IDK What To Call This</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                            <button class="download-button">
+                                <img src="assets/img/download.png" alt="Download" class="download-icon">
+                            </button>
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/IDK What to call this.MP3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Cinematic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">War Within War</div>
+                        <div class="portfolio-caption-subheading text-muted">War Within War (Inspired by War Paint)</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
