--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="games.html"><strong>Games</strong></a></li>
                         <li class="nav-item"><a class="nav-link" href="payments.html"><strong>Payments</strong></a></li>
                         <li class="nav-item"><a class="nav-link" href="testimonials.html"><strong>Testimonials</strong></a></li>
+                        <li class="nav-item"><a class="nav-link" href="freestuff.html"><strong>Free Stuff</strong></a></li>
                     </ul>
                 </div>
             </div>
@@ -384,6 +385,7 @@
                             </div>
                         </div>                        
                     </div>
+                    -->
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <video class="img-fluid" src="assets/img/video/Movement System.mp4" alt="Movement System"  controls></video>
@@ -392,8 +394,8 @@
                             </div>
                         </div>                        
                     </div>
-                    -->
-                    <div class="col-lg-12">
+                    
+                    <div class="col-lg-10">
                         <div class="portfolio-item">
                             <div class="col-lg-12">
                                 <p><span style="color: #f0f0f0;">Same thing here, gifs are the bane of my existence.</span></p>
