--- a/payments.html
+++ b/payments.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="games.html"><strong>Games</strong></a></li>
                         <li class="nav-item"><a class="nav-link" href="payments.html"><strong>Payments</strong></a></li>
                         <li class="nav-item"><a class="nav-link" href="testimonials.html"><strong>Testimonials</strong></a></li>
+                        <li class="nav-item"><a class="nav-link" href="freestuff.html"><strong>Free Stuff</strong></a></li>
                     </ul>
                 </div>
             </div>
@@ -169,26 +170,52 @@
         <div class="container">
             <div class="col-lg-12 mb-4">
                 <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
-                    <h4 style="color: #ff3e3e;">Free Services</h4>
-                    <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I am offering services for free as it could be purely for learning, helping others, and of course having fun.</p>
-                    <p>Currently, I'm offering free services for the following games:</p>
+                    <h4 style="color: #ff3e3e;">Special Services</h4>
+                    <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I am offering services for free or at a massive discount as it could be purely for learning, helping others, and of course having fun.</p>
+                    <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
+                    <p>Currently, I'm offering special services for the following games:</p>
                     <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                        <li>The Skinwalker (By Otrix and Zaku)</li>
-                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity/Ark Hannold)</li>
+                        <li>Paradox (Project' Inc./Lighty_42) - All Services 90% Off</li>
+                        <li>The Skinwalker (By Otrix and Zaku) - All Services 30% Off</li>
+                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity/Ark Hannold) - All Services 25%</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
     <div class="divider"></div>
-    <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
-    <footer class="footer py-4">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start">Copyright &copy; Fancy Ducc Portfolio 2024</div>
+        <section class="page-section" id="contact" style="background-color: #111111; color: #f0f0f0;">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Contact Me</span></h2>
+                </div>
+                <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need expert animation, detailed scripting, unique building, or even a bit of 3D modeling, I'm here to help bring your gaming ideas to life.</span></p>
+                <p><span style="color: #f0f0f0;">Don't be a stranger - feel free to reach out with any questions, project ideas, or even just to chat about game development. I'm available on Discord as distinguished_duccer 7 days a week because I am chronically online. :D</span></p>
+                <div class="text-center">
+                    <a href="http://discordapp.com/users/1027686323282260069" target="_blank" class="btn btn-primary btn-xl text-uppercase"><span style="color: #ffffff;">Contact Me Here</span></a>
+                </div>
+                <div class="text-center mt-4">
+                    <a href="http://discordapp.com/users/1027686323282260069" target="_blank" class="contact-icon">
+                        <img class="img-fluid" src="assets/img/logos/Discord.png" alt="Discord" loading="lazy"/>
+                    </a>
+                    <a href="mailto:aweeaaweee@gmail.com" target="_blank" class="contact-icon mx-4">
+                        <img class="img-fluid" src="assets/img/logos/Gmail.png" alt="Gmail" loading="lazy"/>
+                    </a>
+                    <a href="https://www.roblox.com/users/2038901944/profile" target="_blank" class="contact-icon">
+                        <img class="img-fluid" src="assets/img/logos/Roblox.png" alt="Roblox" loading="lazy"/>
+                    </a>
+                </div>                
             </div>
-        </div>
-    </footer>
+        </section>
+        <div class="divider"></div>
+        <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Fancy Ducc Portfolio 2024</div>
+                </div>
+            </div>
+        </footer>
     <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="js/scripts.js"></script>
