--- a/payments.html
+++ b/payments.html
@@ -175,7 +175,7 @@
                     <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
                     <p>Currently, I'm offering special services for the following games:</p>
                     <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                        <li>Paradox (Project' Inc./Lighty_42) - All Services 90% Off</li>
+                        <li>Paradox (Project' Inc./Lighty_42) - All Services Free</li>
                         <li>The Skinwalker (By Otrix and Zaku) - All Services 30% Off</li>
                         <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity/Ark Hannold) - All Services 25%</li>
                     </ul>
