website face lift
also removed a bunch of songs that i didn't like anymore and also remastered 2 songs cause i felt like it

--- a/index.html
+++ b/index.html
@@ -431,20 +431,6 @@
                     </div>
                     <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Where Am I Revisited</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/Where am I Remastered.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
                         <div class="portfolio-caption-subheading text-muted">Atmospheric Test</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
@@ -468,23 +454,6 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/In-Between.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Limbo</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/Limbo.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -518,23 +487,6 @@
                     </div>
                     <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Horror</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Rage Chase Theme</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/Rage Chase Theme.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Horror</span></h4>
                         <div class="portfolio-caption-subheading text-muted">The Art Gallery</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
@@ -562,7 +514,7 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Vaporwave</span></h4>
+                        <h4><span style="color: #f0f0f0;">Synthwave</span></h4>
                         <div class="portfolio-caption-subheading text-muted">Synth Testing</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
@@ -579,7 +531,7 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Vaporwave</span></h4>
+                        <h4><span style="color: #f0f0f0;">Synthwave</span></h4>
                         <div class="portfolio-caption-subheading text-muted">Circuitry</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
@@ -592,6 +544,23 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/Circuitry.MP3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Calming</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">The Descent</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                            <button class="download-button">
+                                <img src="assets/img/download.png" alt="Download" class="download-icon">
+                            </button>
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/The Descent.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -678,8 +647,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Cinematic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">War Within War (Inspired by War Paint)</div>
+                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">On The Run</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -690,7 +659,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/War Within War.mp3" type="audio/mp3">
+                            <source src="assets/audio/On The Run.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -742,57 +711,6 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/The Thoughts I Cant Own.MP3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Funny</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Fire In The Hole</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/FIRE IN THE HOLE.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Funny</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Ghost Rave</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/Ghost Rave.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Funny</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Braim Fard</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/braim fard.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -886,6 +804,9 @@
             </div>
         </footer>
         <div id="lightbox" class="lightbox-overlay">
+            <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
+            <img id="lightbox-img" class="lightbox-img" src="" alt="">
+            <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
             <img id="lightbox-img" class="lightbox-img" src="" alt="">
         </div>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
