--- a/payments.html
+++ b/payments.html
@@ -48,12 +48,14 @@
             <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Understanding that everyone is unique, and every project comes with its own set of requirements, I try to provide flexibility when it comes to payment methods. Whether you are an independent creator on a budget or a well-established team, rest assured that I've got a payment method that suits you. You can pay for my services through a variety of methods, including Robux, group funds on Roblox, USD, or Cashapp. My goal is to make the payment process as seamless and convenient as possible for you, so you can focus more on the creative aspect of your game and less on the logistics.</span></p>
             <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Prices must be paid 5% when I begin working, 35% half way done with my contribution, and the last 60% after I am done working for your project, this is to make sure that I get paid fairly for the work I do.</span></p>
             <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">None of these prices are final, everything may or may not be adjusted to match the amount of work spent, how complex the work is, how long it takes me to complete the work, and how many features/details you request. I will not go above what you request so that you can rely on a budget.</span></p>
+        <!--
             <div id="discount-card" class="card discount-card" style="background-color: #222222; color: #f0f0f0; padding: 1rem; margin-bottom: 1rem;">
                 <h3 style="color: #ff3e3e;">Portfolio Release Discount</h3>
                 <ul id="discounted-services-list" style="color: #f0f0f0;">
                 </ul>
                 <p>Discounts are applied when you hire me, which means even if the discount ends during whatever you hired me for, you will still get the discounted rate for the entire duration of our work together.</p>
-            </div>            
+            </div>    
+        -->
             <div class="row">
                 <div class="col-lg-6 mb-4">
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
@@ -175,9 +177,9 @@
                     <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
                     <p>Currently, I'm offering special services for the following games:</p>
                     <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                        <li>Paradox (Project' Inc./Lighty_42) - All Services Free</li>
+                        <li>Grace (The Fartering Few / szymon227G) - All Services Free</li>
                         <li>The Skinwalker (By Otrix and Zaku) - All Services 30% Off</li>
-                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity/Ark Hannold) - All Services 25%</li>
+                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity / Ark Hannold) - All Services 25%</li>
                     </ul>
                 </div>
             </div>
