--- a/payments.html
+++ b/payments.html
@@ -177,9 +177,10 @@
                     <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
                     <p>Currently, I'm offering special services for the following games:</p>
                     <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                        <li>Grace (The Fartering Few / szymon227G) - All Services Free</li>
-                        <li>The Skinwalker (By Otrix and Zaku) - All Services 30% Off</li>
-                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity / Ark Hannold) - All Services 25%</li>
+                        <li>DECAY (DECAY / forsakensn) - All Services Free</li>
+                        <li>Grace (The Fartering Few / szymon227G) - All Services 45% Off</li>
+                        <li>The Skinwalker (By Otrix and Zaku) - All Services 25% Off</li>
+                        <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity / Ark Hannold) - All Services 15%</li>
                     </ul>
                 </div>
             </div>
