--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </div>
         </header>
         <section class="page-section" id="building" style="background-color: #111111; color: #f0f0f0;">
+            <div class="text-center">
+                <p><span style="color: hsl(0, 0%, 100%);">If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts. </span></p>
+            </div>
+
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Professional Buildings and Landscaping</span></h2>
