videos and music and more fixes

--- a/index.html
+++ b/index.html
@@ -330,23 +330,39 @@
                         </div>
                     </div>
                     -->
-                    <div class="col-md-6 mb-6">
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/Cutscene.mp4" alt="Movement System"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Cutscene Testing</div>
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/Closet.mp4" alt="Movement System"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Closet Hiding Animations</div>
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/Paradox Cutscene.mp4" alt="Movement System"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Paradox Cutscene</div>
+                                <p><span style="color: #f0f0f0;">VFX, Animation, Camera-work, and Scripting by me.</span></p>
+                            </div>
+                        </div>                        
+                    </div>
+
+                    <div class="col-lg-10">
                         <div class="portfolio-item">
                             <div class="col-lg-12">
-                                <p><span style="color: #f0f0f0;">This page section has been temporarily removed until I figure out why the gifs are causing iOS to crash, sorry :/</span></p>
+                                <p><span style="color: #f0f0f0;">The gifs from this page section has been temporarily removed until I figure out why they are causing iOS to crash, sorry :/</span></p>
                             </div>
                         </div>
-                    </div>
-                    
-                    <div class="col-lg-6">
-                        <div class="portfolio-item">
-                            <p><span style="color: #f0f0f0;"><strong>I created a cutscene not a long time ago, but I don't know what to put here if I remove this section, so it stays :p.</strong></span></p>
-                            <p><span style="color: #f0f0f0;"><strong>If you wish to play the game and have your own avatar in the cutscene, click <a href="https://www.roblox.com/games/13695671920/Cutscene" class="hover-link">here</a></strong></span></p>
-                            <div class="video-wrapper mt-4">
-                                <video class="img-fluid" src="assets/img/video/Cutscene.mp4" alt="Cutscene"  controls></video>
-                            </div>
-                        </div>
-                    </div>
+                    </div>  
                 </div>
             </div>
         </section>
@@ -398,14 +414,14 @@
                             </div>
                         </div>                        
                     </div>
-                    
-                    <div class="col-lg-10">
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <div class="col-lg-12">
-                                <p><span style="color: #f0f0f0;">Same thing here, gifs are the bane of my existence.</span></p>
+                            <video class="img-fluid" src="assets/img/video/Ladder System.mp4" alt="Movement System"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Ladder System</div>
                             </div>
-                        </div>
-                    </div>                            
+                        </div>                        
+                    </div>                         
                 </div>
             </div>
         </section>
