--- a/testimonials.html
+++ b/testimonials.html
@@ -84,6 +84,17 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p class="testimonial-text" style="color: #f0f0f0;">"Very good service, he's just really cracked at what he does and fast, he's also really passionate on the stuff he works on."</p>
+                            <div class="testimonial-author" style="color: #888;">- Lighty_42 -</div>
+                        </div>
+                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
+                            <div class="testimonial-rating" style="color: #f5c518;">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                             <p class="testimonial-text" style="color: #f0f0f0;">"your 3D modeling isn't perfect, but it isn't bad by any means. even though you don't advertise it as the best you are still not awful at it, I'd say your a little above average in skill."</p>
                             <div class="testimonial-author" style="color: #888;">- RealAndresYas110 -</div>
@@ -99,22 +110,11 @@
                             <p class="testimonial-text" style="color: #f0f0f0;">"Working with you was very nice, you were dedicated through the full game and tbh were the funniest person on the team by far. You are also very creative, which isn't very common anymore."</p>
                             <div class="testimonial-author" style="color: #888;">- Polyograthyms -</div>
                         </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"10/10 bussin od ong on fanum tax on big balls"</p>
-                            <div class="testimonial-author" style="color: #888;">- f4iZ. -</div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div class="text-center" style="margin-top: 2rem; color: #888;">
-                <p>All names provided here were asked what they think of my work (apart from f4iZ, he's my friend, not someone who hired me... I lost a bet)</p>
+                <p>All names provided here were asked what they think of my work</p>
             </div>
         </section>
         <div class="divider"></div>
